// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBody props should render with prop active 1`] = `
<div
  aria-hidden="false"
  aria-labelledby="trigger-"
  class="tab-body overflow-hidden active overflow-y-auto"
  role="tabpanel"
  tabindex="0"
>
  <div
    class="tab-content"
    style="background-color: rgb(43, 138, 198);"
  >
    
    &lt;div&gt;Inner Tab&lt;/div&gt;
    
  </div>
</div>
`;

exports[`TabBody props should render with prop background 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="trigger-"
  class="tab-body overflow-hidden"
  role="tabpanel"
  tabindex="0"
>
  <div
    class="tab-content"
    style="background-color: rgb(255, 255, 255);"
  >
    
    &lt;div&gt;Inner Tab&lt;/div&gt;
    
  </div>
</div>
`;

exports[`TabBody props should render with prop fixed 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="trigger-"
  class="tab-body overflow-hidden fixed-height absolute top-0 left-0 w-full overflow-x-hidden"
  role="tabpanel"
  tabindex="0"
>
  <div
    class="tab-content"
    style="background-color: rgb(43, 138, 198);"
  >
    
    &lt;div&gt;Inner Tab&lt;/div&gt;
    
  </div>
</div>
`;

exports[`TabBody props should render with prop name 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="trigger-tab-name"
  class="tab-body overflow-hidden"
  role="tabpanel"
  tabindex="0"
>
  <div
    class="tab-content"
    style="background-color: rgb(43, 138, 198);"
  >
    
    &lt;div&gt;Inner Tab&lt;/div&gt;
    
  </div>
</div>
`;

exports[`TabBody props should render without props 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="trigger-"
  class="tab-body overflow-hidden"
  role="tabpanel"
  tabindex="0"
>
  <div
    class="tab-content"
    style="background-color: rgb(43, 138, 198);"
  >
    
    &lt;div&gt;Inner Tab&lt;/div&gt;
    
  </div>
</div>
`;
